[PI-003] Add template_custom_frosted_glass_number_statistic_card

--- a/streamline_templates.yaml
+++ b/streamline_templates.yaml
@@ -199,3 +199,59 @@ template_custom_frosted_glass_sensor_card_line_graph:
           ha-state-icon {
             display: none;
           }
+
+# ==================================================================
+#  TEMPLATE: CUSTOM FROSTED GLASS NUMBER STATISTIC CARD
+#
+#  A sensor card showing name, state and an icon.
+# ==================================================================
+
+template_custom_frosted_glass_number_statistic_card:
+  default:
+    - name: My frosted glass card
+    - entity: sensor.kondensator_energiekosten
+  card:
+    type: custom:button-card
+    name: "[[name]]"
+    entity: "[[entity]]"
+    label: "[[label]]"
+    show_icon: false
+    show_name: true
+    show_state: true
+    show_label: true
+    state_color: false
+    styles:
+      card:
+        - padding: 30px
+        - align-items: center
+        - font-family: Roboto
+        - max-height: 120px
+        - height: 120px
+      grid:
+        - display: grid
+        - grid-template-areas: |
+            "name state"
+            "label state"
+        - grid-template-columns: auto 1fr
+        - grid-template-rows: auto auto
+        - align-items: center
+        - grid-template-rows: min-content min-content min-content
+        - row-gap: 5px
+      name:
+        - grid-area: name
+        - justify-self: start
+        - font-size: 16px
+        - font-weight: 500
+      state:
+        - grid-area: state
+        - justify-self: end
+        - width: 100px
+        - font-size: 22px
+        - font-weight: 300
+      label:
+        - grid-area: label
+        - justify-self: start
+        - font-size: 22px
+        - font-weight: 300
+      icon:
+        - color: white
